# times-series-with-prophet

./: .pyproject.toml.un~  LICENSE  README.md  pyproject.toml  pyproject.toml~
data/examples/: example_yosemite_temps.csv  monthly-car-sales-processed.csv
notebooks/: Time Series - semana 2.ipynb  Time Series.ipynb
notebooks/.ipynb_checkpoints/: Time Series - semana 2-checkpoint.ipynb  Time Series - semana 4-checkpoint.ipynb
