[tool.poetry]
name = "timeseriesmaster"
version = "0.1.0"
description = "Tarea para la maestria en Big Data Science de la Univ. Cuauhtemoc Ags."
authors = ["Oswaldo Sergio y Roberto"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
fbprophet = "^0.7.1"
pystan = "^2.19.1"
plotly = "^4.14.3"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
